<resources>
    <string name="app_name">FitMeet</string>

    <string name="title_event_list">Events</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>

    <string name="title_activity_event_list">EventListActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>

    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="edit_event">Edit Event</string>
    <string name="event_details">Event Details</string>

    <string name="event_heading">Organize nn Event</string>
    <string name="event_subheading">Give a name to your event. Describe what it is about and what you will do.</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Description</string>
    <string name="event_location">Location</string>
    <string name="location_hint">Select a location</string>
    <string name="event_date">Date</string>
    <string name="event_date_time">Date/Time</string>
    <string name="event_tags">Event Tags</string>
    <string name="search">Search</string>
    <string name="placeholder">Placeholder</string>
    <string name="location_error">Please select location</string>
    <string name="datetime_error">Please select date</string>
    <string name="upload">Upload Image</string>
    <string name="upload_error">Please Upload Image</string>
    <string name="dateTime_hint">Add Date/Time</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Create New Account</string>
    <string name="btn_link_to_login">Already Registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="background_image">Background Image for Login Acitvity</string>
    <string name="logo">App Logo</string>
    <string name="create_event_image">Create Event Image</string>
    <string name="explore_events">Explore Events</string>

    <string name="date">date</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="clear">clear</string>
    <string name="see_all">See All</string>
    <string name="created_event">Created Events</string>
    <string name="joined_event">Joined Events</string>
    <string name="profile_description">Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>


    <string name="CulturalEvents">Cultural Events</string>
    <string name="OffLeashDogAreas">Off Leash Dog Areas</string>
    <string name="Parks">Parks</string>
    <string name="SportsFields">Sports Fields</string>
    <string name="GlenbrookRavine">Glenbrook Ravine</string>


    <!-- TODO: Add strings below for testing. DONOT delete anything above this. -->

    <string name="email">Email</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile1">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_database_test">DatabaseTest</string>
    <string-array name="demo_array">
        <item>Running</item>
        <item>Meditation</item>
        <item>Outdoors</item>
        <item>Hiking</item>
        <item>Sports</item>
        <item>Soccer</item>
        <item>Beach</item>
        <item>Recreational Activities</item>
        <item>Baseball</item>
        <item>Football</item>
        <item>Adventure</item>
        <item>Fitness</item>
        <item>Fun</item>
        <item>Any age</item>
        <item>Children</item>
        <item>Animals</item>
        <item>Dog</item>
        <item>park</item>
        <item>Cat</item>
        <item>Sports Field</item>
        <item>Cricket</item>
        <item>Yoga</item>
        <item>Dance</item>
        <item>Off Leash Dog Area</item>
        <item>Cultural</item>
    </string-array>
    <string name="title_activity_tabexample">tabexample</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="LoginOrCreate">Login or Create Your New Account</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>

</resources>


