<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinator"
    tools:context=".event.EditEventActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/nested_scroll_view">

            <TextView
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_subheading" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_name"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/caption_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/event_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Caption" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_description" />

            </android.support.design.widget.TextInputLayout>

            <View style="@style/Divider"/>

            <TextView
                style="@style/heading"
                android:id="@+id/location_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_location" />

            <EditText
                android:id="@+id/event_location"
                android:focusableInTouchMode="false"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_hint"
                android:drawableEnd="@drawable/ic_action_location"
                android:inputType="text" />

            <TextView
                style="@style/error"
                android:id="@+id/location_error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_error"
                android:visibility="gone"/>

            <View style="@style/Divider"/>

            <TextView
                style="@style/heading"
                android:id="@+id/datetime_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_date_time" />

            <EditText
                android:id="@+id/event_date"
                android:focusableInTouchMode="false"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dateTime_hint"
                android:drawableEnd="@drawable/ic_action_access_time"/>

            <TextView
                style="@style/error"
                android:id="@+id/date_error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datetime_error"
                android:visibility="gone"/>

            <View style="@style/Divider"/>

            <TextView
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload" />

            <Button
                android:id="@+id/btn_upload_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:textColor="@android:color/black" />

            <TextView
                style="@style/error"
                android:id="@+id/upload_error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_error"
                android:visibility="gone"/>

            <View style="@style/Divider"/>
            <TextView
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_tags" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignContent="space_around"
                app:alignItems="flex_start"
                app:dividerDrawable="@drawable/div"
                app:flexWrap="wrap"
                app:showDivider="middle"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_action_done" />

</android.support.design.widget.CoordinatorLayout>